--- a/static/css/index.css
+++ b/static/css/index.css
@@ -97,6 +97,7 @@ body {
 
     overflow: hidden;
     border-radius: 10px !important;
+    border: 2px solid #000;
 }
 
 .publication-video iframe {
